# emg3d

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .rtd-requirements.txt  .rtfd.yml  .travis.yml  CHANGELOG.rst  CREDITS.rst  MAINTENANCE.rst  MANIFEST.in  Makefile  README.rst  compare_gaussseidel.py  compare_solve.py  environment.yml  pyproject.toml  requirements-dev.txt  requirements-rtfd.txt  requirements.txt  rtfd.yml  runtests.sh  setup.py
.github/workflows/: gallery.yml  linkcheck.yml  linux.yml  linux_macos_windows_latest_conda.yml  macos_windows.yml  pytest.yml  pytest_win_mac.yml
docs/: Makefile  api_cli.rst  api_multigrid.rst  api_utils.rst  cli.rst  code-opt.rst  code-utio.rst  code.rst  conf.py  cpu_and_ram.rst  figures_mesh.py  gallery.rst  index.rst  mgwhat.rst  optimize.rst  paper.bib  paper.md  paper.py  references.rst  solver.rst  theory.rst  usage.rst
docs/_static/: coordinate_system.py  ellipse.py  levels.tex  schematics.tex  style.css
docs/api/: core.rst  electrodes.rst  index.rst  inversion.rst  io.rst  maps.rst  (+3 more)
emg3d/: Makefile  __init__.py  __main__.py  _ccore.py  _multiprocessing.py  ccore.c  cgauss_seidel.c  core.py  csolve.c  electrodes.py  fields.py  io.py  maps.py  meshes.py  models.py  njitted.py  optimize.py  simulation.py  simulations.py  solver.py  survey.py  surveys.py  time.py  utils.py
examples/: README.rst
tests/: alternatives.py  cli.py  electrodes.py  fields.py  helpers.py  maps.py  meshes.py  simulations.py  solver.py  test_cli.py  test_core.py  test_electrodes.py  test_fields.py  test_io.py  test_maps.py  test_meshes.py  test_models.py  test_multiprocessing.py  test_njitted.py  test_optimize.py  test_pygimli.py  test_simpeg.py  test_simulations.py  test_solver.py  test_survey.py  test_surveys.py  test_time.py  test_utils.py  time.py  unused.py
(+108 files in other folders)
